src-ken&y/objects/Class__c.object
<CustomObject>
    <customHelpPage>HelpClasses</customHelpPage>
    <description>A class can be any code or name that groups or classifies inventory.</description>
    <fields>
        <fullName>COGS_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COGS GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Classes (COGS GL Account)</relationshipLabel>
        <relationshipName>Classes_COGS_GL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Unique__c</fullName>
        <description>Name for uniqueness</description>
        <label>Class Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of this class</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Classes (Expense GL Account)</relationshipLabel>
        <relationshipName>Classes_GL_Expense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inventory_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory GL Account</description>
        <label>Inventory GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Classes (Inventory GL Account)</relationshipLabel>
        <relationshipName>Classes_Inventory_GL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Shelf_Life_In_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The minimum shelf life (in days) required for an item of this class to be accepted while receiving.</description>
        <inlineHelpText>The minimum shelf life (in days) required for an item of this class to be accepted in the receiving process.</inlineHelpText>
        <label>Minimum Shelf Life In Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Sample_Percentage__c</fullName>
        <description>The percentage of quantity to be allocated for sampling.</description>
        <inlineHelpText>When receiving items in this class, you can choose to enter a percentage of the total received amount that will be allocated for sampling.</inlineHelpText>
        <label>Quality Sample Percentage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Revenue GL Account</description>
        <label>Revenue GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Classes (Revenue GL Account)</relationshipLabel>
        <relationshipName>Classes_Revenue_GL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shelf_Life_Days__c</fullName>
        <label>Shelf Life Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_1_Name__c</fullName>
        <label>Status 1 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_1_Offset_Days__c</fullName>
        <label>Status 1 Offset Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_2_Name__c</fullName>
        <label>Status 2 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_2_Offset_Days__c</fullName>
        <label>Status 2 Offset Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_3_Name__c</fullName>
        <label>Status 3 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_3_Offset_Days__c</fullName>
        <label>Status 3 Offset Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicate the overall type of this class of items.</description>
        <inlineHelpText>Specifies the type of items in this class. Can be either &quot;Goods&quot;, &quot;Services&quot;, &quot;Labor&quot;, &quot;Miscellaneous&quot;, or &quot;Expense&quot;.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goods</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Minimum_Shelf_Life_In_Days__c</columns>
        <columns>Quality_Sample_Percentage__c</columns>
        <columns>Inventory_GL_Account__c</columns>
        <columns>Revenue_GL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>